Maintain existing behaviour of WarwickHttpServletRequest (i.e. the path of the URL isn't sanitised for getRequestURI())